<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator_LinearLayout</string>
    <string name="action_settings">Settings</string>
    <string name="clear">X</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="pi">π</string>
    <string name="factorial">!</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="e">e</string>
    <string name="power">^</string>
    <string name="sqrt">√</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="div">÷</string>
    <string name="open_par">(</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="mult">X</string>
    <string name="close_par">)</string>
    <string name="equals">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="plus">+</string>

</resources>
